@@ -1,4 +1,5 @@
 174,0
+S,TensorOnVectorSpaces,Returns the tensor on vector spaces (forgets all other structure of the domain and codomain) along with a homotopism,0,1,0,0,0,0,0,0,0,TenSpcElt,,TenSpcElt,Hmtp,-38,-38,-38,-38
 S,Tensor,Returns the tensor from the Cartesian product of the sequence D into C given by F with tensor category Cat. The UserProgram F must take as input a tuple in D,0,4,0,0,0,0,0,0,0,TenCat,,0,0,41,,0,0,-1,,0,0,82,,TenSpcElt,-38,-38,-38,-38,-38
 S,Tensor,Returns the tensor from the Cartesian product of the sequence D into C given by F. The UserProgram F must take as input a tuple in D,0,3,0,0,0,0,0,0,0,41,,0,0,-1,,0,0,82,,TenSpcElt,-38,-38,-38,-38,-38
 S,Tensor,Returns the tensor from the sequence S evaluated by F with tensor category Cat. The UserProgram F must take as input a tuple in the domain,0,3,0,0,0,0,0,0,0,TenCat,,0,0,41,,0,0,82,,TenSpcElt,-38,-38,-38,-38,-38
@@ -11,18 +12,17 @@ S,Tensor,Returns the tensor from the sequence S over the free R-modules with dim
 S,Tensor,Returns the tensor from the sequence S over the free R-modules with dimensions given by D in the tensor category Cat,2,0,1,82,0,148,1,1,82,0,-45,3,0,0,0,0,0,0,0,TenCat,,0,0,82,,0,0,82,,TenSpcElt,-38,-38,-38,-38,-38
 S,Tensor,Returns the tensor from the sequence S over the free R-modules with dimensions given by D in the tensor category Cat,2,1,1,82,0,148,2,1,82,0,-45,3,0,0,0,0,0,0,0,82,,0,0,82,,0,0,-44,,TenSpcElt,-38,-38,-38,-38,-38
 S,Tensor,Returns the tensor from the sequence S over the free R-modules with dimensions given by D in the tensor category Cat,2,0,1,82,0,148,1,1,82,0,-45,2,0,0,0,0,0,0,0,82,,0,0,82,,TenSpcElt,-38,-38,-38,-38,-38
-S,AssociatorTensor,Returns the tensor given by the associator in A,0,1,0,0,0,0,0,0,0,-7,,TenSpcElt,-38,-38,-38,-38,-38
+S,AssociatorTensor,Returns the tensor given by the associator in A,0,1,0,0,0,0,0,0,0,-7,,TenSpcElt,175,-38,-38,-38,-38
 S,Polarization,"Returns the tensor, given by the polarization of the homogeneous polynomial f, along with the polarization of f",0,1,0,0,0,0,0,0,0,-16,,TenSpcElt,-16,-38,-38,-38,-38
 S,Polarization,"Returns the tensor, given by the polarization of the univariate polynomial f",0,1,0,0,0,0,0,0,0,312,,TenSpcElt,-38,-38,-38,-38,-38
-S,CommutatorTensor,Returns the tensor given by commutator in A,0,1,0,0,0,0,0,0,0,-7,,TenSpcElt,-38,-38,-38,-38,-38
-S,Tensor,Returns the tensor from A x A to A given by the product,0,1,0,0,0,0,0,0,0,-7,,TenSpcElt,-38,-38,-38,-38,-38
+S,CommutatorTensor,Returns the tensor given by commutator in A,0,1,0,0,0,0,0,0,0,-7,,TenSpcElt,Hmtp,-38,-38,-38,-38
+S,Tensor,Returns the tensor from A x A to A given by the product,0,1,0,0,0,0,0,0,0,-7,,TenSpcElt,Hmtp,-38,-38,-38,-38
 S,pCentralTensor,Returns the tensor Ls x Lt >-> Ls+t from the associated Lie algebra from the p-central series of G,0,4,0,0,0,0,0,0,0,148,,0,0,148,,0,0,148,,0,0,-27,,TenSpcElt,175,175,175,-38,-38
 S,pCentralTensor,Returns the tensor Ls x Lt >-> Ls+t from the associated Lie algebra from the p-central series of G,0,3,0,0,0,0,0,0,0,148,,0,0,148,,0,0,129,,TenSpcElt,175,175,175,-38,-38
 S,pCentralTensor,Returns the tensor L1 x L1 >-> L2 from the associated Lie algebra from the p-central series of G,0,1,0,0,0,0,0,0,0,129,,TenSpcElt,175,175,175,-38,-38
 S,Tensor,Returns the tensor associated to the quotient (polynomial) ring Q,0,1,0,0,0,0,0,0,0,313,,TenSpcElt,-38,-38,-38,-38,-38
 S,Shuffle,"Returns the Knuth-Liebler shuffle of M, with valence v, by the permutation g on the set [0..v]",0,2,0,0,0,0,0,0,0,222,,0,0,TenSpcElt,,TenSpcElt,-38,-38,-38,-38,-38
 S,Shuffle,"Returns the Knuth-Liebler shuffle of M, with valence v, by the permutation given by g on the set [0..v]",0,2,0,0,0,0,0,0,0,82,,0,0,TenSpcElt,,TenSpcElt,-38,-38,-38,-38,-38
-S,TensorOnVectorSpaces,Returns the tensor on vector spaces (forgets all other structure of the domain and codomain) along with a homotopism,0,1,0,0,0,0,0,0,0,TenSpcElt,,TenSpcElt,Hmtp,-38,-38,-38,-38
 S,AntisymmetricTensor,Returns an antisymmetric tensor induced from the given tensor,0,1,0,0,0,0,0,0,0,TenSpcElt,,TenSpcElt,-38,-38,-38,-38,-38
 S,AlternatingTensor,Returns an alternating tensor induced from the given tensor,0,1,0,0,0,0,0,0,0,TenSpcElt,,TenSpcElt,-38,-38,-38,-38,-38
 S,SymmetricTensor,Returns a symmetric tensor induced from the given tensor,0,1,0,0,0,0,0,0,0,TenSpcElt,,TenSpcElt,-38,-38,-38,-38,-38
