@@ -1,10 +1,0 @@
-174,0
-S,IsometryGroup,Returns the isometry group of the 2-tensor T,0,1,0,0,0,0,0,0,0,TenSpcElt,,178,-38,-38,-38,-38,-38
-S,PseudoIsometryGroup,Returns the pseudo-isometry group of the 2-tensor T,0,1,0,0,0,0,0,0,0,TenSpcElt,,178,-38,-38,-38,-38,-38
-S,AutotopismGroup,Returns the autotopism group of the 2-tensor T,0,1,0,0,0,0,0,0,0,TenSpcElt,,178,-38,-38,-38,-38,-38
-S,IsometryGroup,Returns the isometry group of the finite p-class 2 group G,0,1,0,0,0,0,0,0,0,129,,178,-38,-38,-38,-38,-38
-S,PseudoIsometryGroup,Returns the pseudo-isometry group of the finite p-class 2 group G,0,1,0,0,0,0,0,0,0,129,,178,-38,-38,-38,-38,-38
-S,IsometryGroup,Returns the isometry group of the finite p-class 2 group G,0,1,0,0,0,0,0,0,0,178,,178,-38,-38,-38,-38,-38
-S,PseudoIsometryGroup,Returns the pseudo-isometry group of the finite p-class 2 group G,0,1,0,0,0,0,0,0,0,178,,178,-38,-38,-38,-38,-38
-S,IsometryGroup,Returns the isometry group of the finite p-class 2 group G,0,1,0,0,0,0,0,0,0,224,,178,-38,-38,-38,-38,-38
-S,PseudoIsometryGroup,Returns the pseudo-isometry group of the finite p-class 2 group G,0,1,0,0,0,0,0,0,0,224,,178,-38,-38,-38,-38,-38
